# stellar-rust-sdk

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md
client/: CHANGELOG.md  Cargo.toml  README.md
client/fixtures/: before_history_error.json  ledger.json  native_asset.json  offer_summary.json  orderbook.json  payment_path.json  trade_aggregation.json
client/fixtures/effects/: account_created.json  account_credited.json  account_home_domain_updated.json  account_removed.json  data_created.json  data_removed.json  data_updated.json  signer_removed.json  signer_updated.json  trade.json  trustline_authorized.json  trustline_created.json  trustline_deauthorized.json  trustline_updated.json
client/fixtures/operations/: account_merge.json  allow_trust.json  change_trust.json  create_account.json  create_passive_offer.json  manage_offer.json  path_payment.json  payment.json  set_options.json
client/fixtures/transactions/: transaction_memo_hash.json  transaction_memo_id.json  transaction_memo_none.json  transaction_memo_return.json  transaction_memo_text.json
client/src/: error.rs  lib.rs  stellar_error.rs  uri.rs
client/src/client/: async.rs  mod.rs  sync.rs
client/src/endpoint/: account.rs  asset.rs  cursor.rs  effect.rs  flat_records.rs  ledger.rs  limit.rs  mod.rs  operation.rs  order.rs  orderbook.rs  payment.rs  records.rs  trade.rs  trades.rs  transaction.rs
client/src/resources/: account.rs  amount.rs  asset.rs  base64string.rs  datum.rs  deserialize.rs  ledger.rs  mod.rs  offer.rs  (+4 more)
(+163 files in other folders)
