[package]
name = "stellar-client"
version = "0.1.0"
authors = ["Kevin Bacha <chewbacha@gmail.com>"]

[dependencies]
futures = "0.1"
http = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stellar-resources = { path = "../resources" }
tokio-core = "0.1"
