[package]
name = "stellar-client"
version = "0.1.1"
authors = ["Kevin Bacha <chewbacha@gmail.com>"]

readme = "../README.md"
repository = "https://github.com/kbacha/stellar-sdk"
homepage = "https://github.com/kbacha/stellar-sdk"

description = "A client interface to the stellar Horizon API"

keywords = [
  "client",
  "stellar",
  "horizon",
  "lumens",
  "cryptocurrency"
]

categories = [
  "api-bindings",
]

license = "MIT"

[badges]
travis-ci = { repository = "kbacha/stellar-sdk" }

[dependencies]
base64 = "0.9"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
futures = "0.1"
http = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
